k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: task-mgmt
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api
        image: ${DOCKER_USER}/task-api:latest
        ports:
        - containerPort: 8080
        resources:
          requests:
            # set low guaranteed resources for stress test
            cpu: "50m"
            memory: "64Mi"
          limits:
            # set low maximum resource allocation for stress test
            cpu: "250m"
            memory: "128Mi"
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 10
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 5
