k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: task-mgmt
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: ${DOCKER_USER}/task-backend:latest
        ports:
        - containerPort: 50051
        resources:
          requests:
            # set low guaranteed resources for stress test
            cpu: "50m"
            memory: "64Mi"
          limits:
            # set low maximum resource allocation for stress test
            cpu: "250m"
            memory: "128Mi"
        livenessProbe:
          grpc:
            port: 50051
          initialDelaySeconds: 10
        readinessProbe:
          grpc:
            port: 50051
          initialDelaySeconds: 5
